# rs-wfa

./: .gitmodules  Cargo.toml  bindings.rs  build.rs  readme.md
src/: affine_wavefront.rs  bindings.rs  edit.rs  lib.rs  main.rs  penalties.rs
tests/: align.rs
