[package]
name = "wfa-rs"
version = "0.1.0"
authors = ["christian <christian@chfi.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.53.1"

[dev-dependencies]
quickcheck = "0.9"
rand = "0.7.3"
