[package]
name = "libwfa"
version = "0.1.0"
authors = ["christian <christian@chfi.se>"]
edition = "2018"
license = "MIT"
description = "Bindings to the C implementation of the WFA alignment algorithm"
repository = "https://github.com/chfi/wfa-rs"
readme = "readme.md"
keywords = ["bioinformatics"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.53.1"
